--- a/nginx.conf
+++ b/nginx.conf
@@ -14,7 +14,7 @@ http {
 #		text/css css;
 #	}
 # We don't need to define path, because it's available in same nginx conf directory.
-include mime.types;
+	include mime.types;
 	
 	# Virtual host
 	# Responsible to listen in port 80
@@ -22,10 +22,10 @@ include mime.types;
 	# *:443 --> https
 	server {
 
-		listen 80;
+	 	listen 80;
 
 		# domain, subdomain, ip-addr
-		# server_name *.example.com
+		# server_name *.example.com | localhost;
 		server_name 172.17.0.32;
 		
 		# root path where nginx serving request
@@ -62,6 +62,7 @@ include mime.types;
 		# Preferential Prefix match
 		# Functionality same as basic prefix modifier but It's used a RegEx, that's is more important.
 		# Priority over regular expression matches.
+		# After anything you will write '/Demo2' like 'Demo2234234', it will gives the same result.
 		location ^~ /Demo2 {
 		return 200 "Hello this is from '/Demo2' directory.";
 		}
